i added a print stattement echarai

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ endorsed.javafx.ant.classpath=.
 file.reference.jfoenix-8.0.5.jar=C:\\Users\\Crazydude\\Downloads\\Programs\\jfoenix-8.0.5.jar
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
-user.properties.file=C:\\Users\\Crazydude\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Nadee\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
